callcenter-was/build_log.txt

> Task :compileJava FAILED
C:\ContinueProject\call-center-project\callcenter-was\src\main\java\com\gwangjin\callcenterwas\api\controller\CallCenterOperatorController.java:28: error: cannot find symbol
        String token = sessionManager.createSession(agent.getAgentId());
                       ^
  symbol:   variable sessionManager
  location: class CallCenterOperatorController
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 2s
1 actionable task: 1 executed
